<resources>
    <string name="app_name">StudentHelperRaf</string>
    <string name="filter_fragment_title">Schedule</string>
    <string name="statistics_fragment_title">Statistics</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="note_list_fragment_title">Notes</string>
    <string name="single_note_fragment_title">Single note fragment</string>
    <string name="button_search">Search</string>
    <string name="teacher_subject">Teacher/Subject</string>
    <string name="note_title_text_holder">This is a note title</string>
    <string name="note_content_text_holder">This is a note content...</string>
    <string name="single_note_close_btn">Close note</string>
    <string name="single_note_edit_btn">Save changes</string>
    <string name="search_by_title_or_content">Search notes by title or content...</string>
    <string name="new_note_close_btn">Close</string>
    <string name="new_note_save_btn">Save</string>



    <string-array name="group_filter_array">
        <item>Group</item>
        <item>101</item>
        <item>102</item>
        <item>103</item>
        <item>120</item>
        <item>121</item>
        <item>122</item>
        <item>123</item>
        <item>124</item>
        <item>125</item>
        <item>1d1</item>
        <item>1d2</item>
        <item>1s1</item>
        <item>1s2</item>
        <item>1s3</item>
        <item>1s4</item>
        <item>201</item>
        <item>202</item>
        <item>203</item>
        <item>204</item>
        <item>205</item>
        <item>220</item>
        <item>221</item>
        <item>2d1</item>
        <item>2d2</item>
        <item>2s1</item>
        <item>2s2</item>
        <item>301</item>
        <item>302</item>
        <item>303</item>
        <item>304</item>
        <item>305</item>
        <item>306</item>
        <item>307</item>
        <item>308</item>
        <item>309</item>
        <item>310</item>
        <item>311</item>
        <item>321</item>
        <item>322</item>
        <item>323</item>
        <item>324</item>
        <item>325</item>
        <item>326</item>
        <item>327</item>
        <item>328</item>
        <item>329</item>
        <item>3d1</item>
        <item>3d2</item>
        <item>3d3</item>
        <item>3s1</item>
        <item>3s2</item>
        <item>401</item>
        <item>402</item>
        <item>403</item>
        <item>404</item>
        <item>420</item>
        <item>4d1</item>
        <item>4d2</item>
    </string-array>

    <string-array name="day_filter_array">
        <item>Day</item>
        <item>PON</item>
        <item>UTO</item>
        <item>SRE</item>
        <item>CET</item>
        <item>PET</item>
    </string-array>

</resources>