<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.fragments.SingleNoteFragment">

    <EditText
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_text_holder"
        android:maxLength="30"
        android:background="@drawable/layout_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"/>

    <EditText
        android:id="@+id/note_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="350dp"
        android:hint="@string/note_content_text_holder"
        android:maxLength="1000"
        android:background="@drawable/layout_border"
        app:layout_constraintTop_toBottomOf="@id/note_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        />

    <Button
        android:id="@+id/close_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/single_note_close_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:paddingBottom="10dp"/>

    <Button
        android:id="@+id/note_edit_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/single_note_edit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:paddingBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>